[project]
name = "ml-engine"
version = "0.1.0"
description = "This project demonstrates how an api can serve machine learning models on demand via API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.69",
    "fastapi>=0.121.1",
    "moto>=5.0.0",
    "polars[parquet]>=1.35.2",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
